interp_frontend/src/Collabrated/InterpreterFrontEnd/ConsoleApplication1/spinachParser.cs
// $ANTLR 3.1.3 Mar 18, 2009 10:09:25 spinach.g 2009-11-02 01:08:25


using System.Collections.Generic;


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;



using Antlr.Runtime.Tree;

public class spinachParser : Parser 
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"VARIABLE", 
		"INT_LITERAL", 
		"DOUBLE_LITERAL", 
		"VARTYPE", 
		"ASSIGNMENT", 
		"END_OF_STATEMENT", 
		"STRINGTYPE", 
		"LEFTPARANTHESIS", 
		"RIGHTPARANTHESIS", 
		"LEFTBRACE", 
		"POINT", 
		"RIGHTBRACE", 
		"EQUALITYEXPRESSION", 
		"NONEQUALITYEXPRESSION", 
		"SCALEMODE", 
		"DOT", 
		"PLUS", 
		"MULTIPLY", 
		"WHITESPACE", 
		"'Matrix'", 
		"'<'", 
		"'>'", 
		"'['", 
		"']'", 
		"','", 
		"'Vector'", 
		"'Struct'", 
		"'delete'", 
		"'print'", 
		"'parallelfor'", 
		"'SYNC'", 
		"'to'", 
		"'if'", 
		"'else'", 
		"'for'", 
		"'void'", 
		"'return'", 
		"'subPlot'", 
		"'plot'", 
		"'resetPlot'", 
		"'setPlotAxis'", 
		"'setAxisTitle'", 
		"'setScaleMode'"
    };

    public const int T__29 = 29;
    public const int T__28 = 28;
    public const int T__27 = 27;
    public const int T__26 = 26;
    public const int T__25 = 25;
    public const int T__24 = 24;
    public const int POINT = 14;
    public const int T__23 = 23;
    public const int EQUALITYEXPRESSION = 16;
    public const int DOUBLE_LITERAL = 6;
    public const int EOF = -1;
    public const int NONEQUALITYEXPRESSION = 17;
    public const int LEFTBRACE = 13;
    public const int MULTIPLY = 21;
    public const int PLUS = 20;
    public const int RIGHTBRACE = 15;
    public const int DOT = 19;
    public const int END_OF_STATEMENT = 9;
    public const int RIGHTPARANTHESIS = 12;
    public const int T__42 = 42;
    public const int T__43 = 43;
    public const int T__40 = 40;
    public const int SCALEMODE = 18;
    public const int T__41 = 41;
    public const int INT_LITERAL = 5;
    public const int T__46 = 46;
    public const int T__44 = 44;
    public const int T__45 = 45;
    public const int WHITESPACE = 22;
    public const int VARTYPE = 7;
    public const int T__30 = 30;
    public const int T__31 = 31;
    public const int T__32 = 32;
    public const int T__33 = 33;
    public const int T__34 = 34;
    public const int T__35 = 35;
    public const int VARIABLE = 4;
    public const int T__36 = 36;
    public const int T__37 = 37;
    public const int T__38 = 38;
    public const int T__39 = 39;
    public const int STRINGTYPE = 10;
    public const int LEFTPARANTHESIS = 11;
    public const int ASSIGNMENT = 8;

    // delegates
    // delegators



        public spinachParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public spinachParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();

             
       }
        
    protected ITreeAdaptor adaptor = new CommonTreeAdaptor();

    public ITreeAdaptor TreeAdaptor
    {
        get { return this.adaptor; }
        set {
    	this.adaptor = value;
    	}
    }

    override public string[] TokenNames {
		get { return spinachParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "spinach.g"; }
    }


    public class program_return : ParserRuleReturnScope
    {
        public List<Element> ret;
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "program"
    // spinach.g:20:1: program returns [List<Element> ret] : ( expr )+ ;
    public spinachParser.program_return program() // throws RecognitionException [1]
    {   
        spinachParser.program_return retval = new spinachParser.program_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        spinachParser.expr_return expr1 = null;




          retval.ret = new List<Element>();

        try 
    	{
            // spinach.g:24:3: ( ( expr )+ )
            // spinach.g:24:5: ( expr )+
            {
            	root_0 = (object)adaptor.GetNilNode();

            	// spinach.g:24:5: ( expr )+
            	int cnt1 = 0;
            	do 
            	{
            	    int alt1 = 2;
            	    int LA1_0 = input.LA(1);

            	    if ( (LA1_0 == VARIABLE || LA1_0 == VARTYPE || LA1_0 == STRINGTYPE || LA1_0 == 23 || (LA1_0 >= 29 && LA1_0 <= 33) || LA1_0 == 36 || (LA1_0 >= 38 && LA1_0 <= 46)) )
            	    {
            	        alt1 = 1;
            	    }


            	    switch (alt1) 
            		{
            			case 1 :
            			    // spinach.g:24:6: expr
            			    {
            			    	PushFollow(FOLLOW_expr_in_program65);
            			    	expr1 = expr();
            			    	state.followingStackPointer--;

            			    	adaptor.AddChild(root_0, expr1.Tree);
            			    	retval.ret.Add(((expr1 != null) ? expr1.ret : null)); 

            			    }
            			    break;

            			default:
            			    if ( cnt1 >= 1 ) goto loop1;
            		            EarlyExitException eee1 =
            		                new EarlyExitException(1, input);
            		            throw eee1;
            	    }
            	    cnt1++;
            	} while (true);

            	loop1:
            		;	// Stops C# compiler whining that label 'loop1' has no statements


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "program"

    public class expr_return : ParserRuleReturnScope
    {
        public Element ret;
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "expr"
    // spinach.g:26:1: expr returns [Element ret] : ( expr1 | parallelfor );
    public spinachParser.expr_return expr() // throws RecognitionException [1]
    {   
        spinachParser.expr_return retval = new spinachParser.expr_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        spinachParser.expr1_return expr12 = null;

        spinachParser.parallelfor_return parallelfor3 = null;



        try 
    	{
            // spinach.g:27:3: ( expr1 | parallelfor )
            int alt2 = 2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0 == VARIABLE || LA2_0 == VARTYPE || LA2_0 == STRINGTYPE || LA2_0 == 23 || (LA2_0 >= 29 && LA2_0 <= 32) || LA2_0 == 36 || (LA2_0 >= 38 && LA2_0 <= 46)) )
            {
                alt2 = 1;
            }
            else if ( (LA2_0 == 33) )
            {
                alt2 = 2;
            }
            else 
            {
                NoViableAltException nvae_d2s0 =
                    new NoViableAltException("", 2, 0, input);

                throw nvae_d2s0;
            }
            switch (alt2) 
            {
                case 1 :
                    // spinach.g:27:4: expr1
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_expr1_in_expr85);
                    	expr12 = expr1();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, expr12.Tree);
                    	retval.ret = ((expr12 != null) ? expr12.ret : null);

                    }
                    break;
                case 2 :
                    // spinach.g:27:37: parallelfor
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_parallelfor_in_expr89);
                    	parallelfor3 = parallelfor();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, parallelfor3.Tree);
                    	retval.ret = ((parallelfor3 != null) ? parallelfor3.ret : null);

                    }
                    break;

            }
            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "expr"

    public class expr1_return : ParserRuleReturnScope
    {
        public Element ret;
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "expr1"
    // spinach.g:30:1: expr1 returns [Element ret] : ( assignment | scalarvardec | vectorvardec | matrixvardec | deletionofvar | structdec | structobjdec | print | ifelse | functioncall | equality | nonequality | forstatement | functiondefination | functionreturn | plotfunctions );
    public spinachParser.expr1_return expr1() // throws RecognitionException [1]
    {   
        spinachParser.expr1_return retval = new spinachParser.expr1_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        spinachParser.assignment_return assignment4 = null;

        spinachParser.scalarvardec_return scalarvardec5 = null;

        spinachParser.vectorvardec_return vectorvardec6 = null;

        spinachParser.matrixvardec_return matrixvardec7 = null;

        spinachParser.deletionofvar_return deletionofvar8 = null;

        spinachParser.structdec_return structdec9 = null;

        spinachParser.structobjdec_return structobjdec10 = null;

        spinachParser.print_return print11 = null;

        spinachParser.ifelse_return ifelse12 = null;

        spinachParser.functioncall_return functioncall13 = null;

        spinachParser.equality_return equality14 = null;

        spinachParser.nonequality_return nonequality15 = null;

        spinachParser.forstatement_return forstatement16 = null;

        spinachParser.functiondefination_return functiondefination17 = null;

        spinachParser.functionreturn_return functionreturn18 = null;

        spinachParser.plotfunctions_return plotfunctions19 = null;



        try 
    	{
            // spinach.g:31:3: ( assignment | scalarvardec | vectorvardec | matrixvardec | deletionofvar | structdec | structobjdec | print | ifelse | functioncall | equality | nonequality | forstatement | functiondefination | functionreturn | plotfunctions )
            int alt3 = 16;
            alt3 = dfa3.Predict(input);
            switch (alt3) 
            {
                case 1 :
                    // spinach.g:31:5: assignment
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_assignment_in_expr1105);
                    	assignment4 = assignment();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, assignment4.Tree);
                    	retval.ret = ((assignment4 != null) ? assignment4.ret : null);

                    }
                    break;
                case 2 :
                    // spinach.g:32:5: scalarvardec
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_scalarvardec_in_expr1113);
                    	scalarvardec5 = scalarvardec();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, scalarvardec5.Tree);
                    	 retval.ret = ((scalarvardec5 != null) ? scalarvardec5.ret : null);

                    }
                    break;
                case 3 :
                    // spinach.g:33:5: vectorvardec
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_vectorvardec_in_expr1121);
                    	vectorvardec6 = vectorvardec();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, vectorvardec6.Tree);
                    	 retval.ret = ((vectorvardec6 != null) ? vectorvardec6.ret : null);

                    }
                    break;
                case 4 :
                    // spinach.g:34:5: matrixvardec
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_matrixvardec_in_expr1129);
                    	matrixvardec7 = matrixvardec();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, matrixvardec7.Tree);
                    	 retval.ret = ((matrixvardec7 != null) ? matrixvardec7.ret : null);

                    }
                    break;
                case 5 :
                    // spinach.g:35:5: deletionofvar
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_deletionofvar_in_expr1137);
                    	deletionofvar8 = deletionofvar();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, deletionofvar8.Tree);
                    	 retval.ret = ((deletionofvar8 != null) ? deletionofvar8.ret : null);

                    }
                    break;
                case 6 :
                    // spinach.g:36:5: structdec
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_structdec_in_expr1145);
                    	structdec9 = structdec();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, structdec9.Tree);
                    	retval.ret = ((structdec9 != null) ? structdec9.ret : null);

                    }
                    break;
                case 7 :
                    // spinach.g:37:5: structobjdec
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_structobjdec_in_expr1153);
                    	structobjdec10 = structobjdec();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, structobjdec10.Tree);
                    	 retval.ret = ((structobjdec10 != null) ? structobjdec10.ret : null);

                    }
                    break;
                case 8 :
                    // spinach.g:38:5: print
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_print_in_expr1161);
                    	print11 = print();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, print11.Tree);
                    	 retval.ret = ((print11 != null) ? print11.ret : null); 

                    }
                    break;
                case 9 :
                    // spinach.g:39:5: ifelse
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_ifelse_in_expr1169);
                    	ifelse12 = ifelse();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, ifelse12.Tree);
                    	retval.ret = ((ifelse12 != null) ? ifelse12.ret : null);

                    }
                    break;
                case 10 :
                    // spinach.g:40:5: functioncall
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_functioncall_in_expr1176);
                    	functioncall13 = functioncall();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, functioncall13.Tree);
                    	retval.ret=((functioncall13 != null) ? functioncall13.ret : null);

                    }
                    break;
                case 11 :
                    // spinach.g:41:5: equality
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_equality_in_expr1183);
                    	equality14 = equality();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, equality14.Tree);
                    	retval.ret = ((equality14 != null) ? equality14.ret : null);

                    }
                    break;
                case 12 :
                    // spinach.g:42:5: nonequality
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_nonequality_in_expr1190);
                    	nonequality15 = nonequality();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, nonequality15.Tree);
                    	retval.ret = ((nonequality15 != null) ? nonequality15.ret : null);

                    }
                    break;
                case 13 :
                    // spinach.g:43:5: forstatement
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_forstatement_in_expr1197);
                    	forstatement16 = forstatement();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, forstatement16.Tree);
                    	retval.ret = ((forstatement16 != null) ? forstatement16.ret : null);

                    }
                    break;
                case 14 :
                    // spinach.g:44:5: functiondefination
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_functiondefination_in_expr1204);
                    	functiondefination17 = functiondefination();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, functiondefination17.Tree);
                    	retval.ret = ((functiondefination17 != null) ? functiondefination17.ret : null);

                    }
                    break;
                case 15 :
                    // spinach.g:45:5: functionreturn
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_functionreturn_in_expr1211);
                    	functionreturn18 = functionreturn();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, functionreturn18.Tree);
                    	retval.ret =((functionreturn18 != null) ? functionreturn18.ret : null);

                    }
                    break;
                case 16 :
                    // spinach.g:46:5: plotfunctions
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_plotfunctions_in_expr1218);
                    	plotfunctions19 = plotfunctions();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, plotfunctions19.Tree);
                    	retval.ret = ((plotfunctions19 != null) ? plotfunctions19.ret : null);

                    }
                    break;

            }
            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "expr1"
